[gd_scene load_steps=4 format=3 uid="uid://dx5ss2xptakj3"]

[ext_resource type="Script" uid="uid://bqkm2srfqv56" path="res://scenes/game_scene/ui_elements/location_action_container.gd" id="1_h6lkj"]
[ext_resource type="PackedScene" uid="uid://cjlwc0ulw3km3" path="res://scenes/game_scene/ui_elements/resource_meter.tscn" id="2_0l6xd"]
[ext_resource type="PackedScene" uid="uid://c6df3skcwcmox" path="res://scenes/game_scene/ui_elements/action_button.tscn" id="2_scrqn"]

[node name="LocationAction" type="BoxContainer"]
custom_minimum_size = Vector2(500, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical = true
script = ExtResource("1_h6lkj")
resource_meter_scene = ExtResource("2_0l6xd")
success_color = Color(0.235294, 0.231373, 0.431373, 1)
failure_color = Color(0.698039, 0.133333, 0.203922, 1)

[node name="ActionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SelectedLabel"
horizontal_alignment = 1

[node name="ActionButton" parent="." instance=ExtResource("2_scrqn")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Read"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LocationsLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Locations:"

[node name="Tree" type="Tree" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 3
hide_root = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Details:"

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
theme_type_variation = &"LocationName"
text_overrun_behavior = 4

[node name="TypeLabel" type="Label" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/NameLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"LocationType"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionDetailsContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CostLabel" type="Label" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer2/ActionDetailsContainer"]
layout_mode = 2
text = "Cost:"

[node name="CostsContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer2/ActionDetailsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 3

[node name="SuccessLabel" type="Label" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer2/ActionDetailsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.235294, 0.231373, 0.431373, 1)
text = "On Success:"

[node name="SuccessContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer2/ActionDetailsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 3

[node name="FailureLabel" type="Label" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer2/ActionDetailsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.698039, 0.133333, 0.203922, 1)
text = "On Failure:"

[node name="FailureContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer2/ActionDetailsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Local:"

[node name="ResourceContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Panel/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ActionButton" to="." method="_on_action_button_pressed"]
[connection signal="wait_time_passed" from="ActionButton" to="." method="_on_action_button_wait_time_passed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Tree" to="." method="_on_tree_item_selected"]
